--- a/site/module-2_Coding-Assignment.html
+++ b/site/module-2_Coding-Assignment.html
@@ -18,7 +18,7 @@
   	</nav>
 
 <section class="container1">
-    <h1> <a href="https://pt.wikipedia.org/wiki/HTML" target="_blanck">HTML</a> is Structure Only</h1>
+    <h1> <a href="https://pt.wikipedia.org/wiki/HTML" target="_blank">HTML</a> is Structure Only</h1>
 
 
     <p id="p1">Hello there! Here we are, trying to learn some styling rules.
