adição de figura e links

--- a/site/module-2_Coding-Assignment.html
+++ b/site/module-2_Coding-Assignment.html
@@ -9,27 +9,32 @@
 
   <body>
   	<nav class="menu center">
-  		<a href="index.html" target="_blank"><div> Home</div></a>
-  		<a href="#section1"><div >Parte 1</div></a>
-  		<a href="#section2"><div >Parte 2</div></a>
-  		<a href="#section3"><div >Parte 3</div></a>
-  		<a href="#section4"><div >Parte 4</div></a>
-  		<a href="#section5"><div >Parte 5</div></a>
+  		
+  		<a href="#section1">Parte 1</a>
+  		<a href="#section2">Parte 2</a>
+  		<a href="#section3">Parte 3</a>
+  		<a href="#section4">Parte 4</a>
+  		<a href="#section5">Parte 5</a>
   	</nav>
 
 <section class="container1">
-    <h1> <a href="https://pt.wikipedia.org/wiki/HTML" target="_blank">HTML</a> is Structure Only</h1>
+	<p>
+		<a href="index.html" target="_blank">
+			<img src="Campinho.jpg" style="width:100%;">
+		</a>
+	</p>
+		<h1> <a href="https://pt.wikipedia.org/wiki/HTML" target="_blank">HTML</a> is not as hard as CSS
+		</h1>
 
-
-    <p id="p1">Hello there! Here we are, trying to learn some styling rules.
-    </p>
+    	<p id="p1">Hello there! Here we are, trying to learn some styling rules.
+    	</p>
 
 <div class="container">
-    <p> Some content should be here. We will continue writing until some text goes to the other line.</p>
+    <p> Some content should be here. We will continue writing until some text goes to the next line.</p>
 
-    <p> Some content should be here. We will continue writing until some text goes to the other line.</p>
+    <p> Some content should be here. We will continue writing until some text goes to the next line.</p>
 
-    <p> Some content should be here. We will continue writing until some text goes to the other line.</p>
+    <p> Some content should be here. We will continue writing until some text goes to the next line.</p>
 </div>
     
     <p class="clear">My best friend's name is  <abbr title = "Abhishek cor de rosa">Abhy</abbr>.</p>
@@ -55,19 +60,24 @@
 
 
 
-    <section class="clear" id="section1"><h2>parte 1</h2>
+    <section class="clear" id="section1"><h2>Parte 1</h2>
+    	<p>BlablablaBlablablaBlablabla BlablablaBlablablaBlabl ablaBlablablaBlablablaBlablablaBlablablaBlabla
+    	</p>
+    	<p> BlablaBlablablaBlablablaBlablabla  blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla
+    	</p>
+    	<p> blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla
+    	</p>
+    </section>
+    <section id="section2"><h2>Parte 2</h2>
     	BlablablaBlablablaBlablabla BlablablaBlablablaBlabl ablaBlablablaBlablablaBlablablaBlablablaBlabla blaBlablablaBlablablaBlablabla  blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla
     </section>
-    <section id="section2"><h2>parte 2</h2>
+    <section id="section3"><h2>Parte 3</h2>
     	BlablablaBlablablaBlablabla BlablablaBlablablaBlabl ablaBlablablaBlablablaBlablablaBlablablaBlabla blaBlablablaBlablablaBlablabla  blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla
     </section>
-    <section id="section3"><h2>parte 3</h2>
+    <section id="section4"><h2>Parte 4</h2>
     	BlablablaBlablablaBlablabla BlablablaBlablablaBlabl ablaBlablablaBlablablaBlablablaBlablablaBlabla blaBlablablaBlablablaBlablabla  blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla
     </section>
-    <section id="section4"><h2>parte 4</h2>
-    	BlablablaBlablablaBlablabla BlablablaBlablablaBlabl ablaBlablablaBlablablaBlablablaBlablablaBlabla blaBlablablaBlablablaBlablabla  blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla
-    </section>
-    <section id="section5"><h2>parte 5</h2>
+    <section id="section5"><h2>Parte 5</h2>
     	BlablablaBlablablaBlablabla BlablablaBlablablaBlabl ablaBlablablaBlablablaBlablablaBlablablaBlabla blaBlablablaBlablablaBlablabla  blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla
     </section>
 </section>
