--- a/site/module-2_Coding-Assignment.html
+++ b/site/module-2_Coding-Assignment.html
@@ -20,7 +20,7 @@
 <section class="container1">
 	<p>
 		<a href="index.html" target="_blank">
-			<img src="Campinho.jpg" style="width:100%;">
+			<img src="Campinho.jpg">
 		</a>
 	</p>
 		<h1> <a href="https://pt.wikipedia.org/wiki/HTML" target="_blank">HTML</a> is not as hard as CSS
@@ -61,7 +61,8 @@
 
 
     <section class="clear" id="section1"><h2>Parte 1</h2>
-    	<p>BlablablaBlablablaBlablabla BlablablaBlablablaBlabl ablaBlablablaBlablablaBlablablaBlablablaBlabla
+    	<p>BlablablaBlablablaBlablabla BlablablaBlablablaBlabl ablaBlablablaBlablablaBlablabl
+    		aBlablablaBlabla
     	</p>
     	<p> BlablaBlablablaBlablablaBlablabla  blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla
     	</p>
@@ -69,16 +70,20 @@
     	</p>
     </section>
     <section id="section2"><h2>Parte 2</h2>
-    	BlablablaBlablablaBlablabla BlablablaBlablablaBlabl ablaBlablablaBlablablaBlablablaBlablablaBlabla blaBlablablaBlablablaBlablabla  blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla
+    	BlablablaBlablablaBlablabla BlablablaBlablablaBlabl ablaBlablablaBlablablaBlablabl
+    	aBlablablaBlabla blaBlablablaBlablablaBlablabla  blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla
     </section>
     <section id="section3"><h2>Parte 3</h2>
-    	BlablablaBlablablaBlablabla BlablablaBlablablaBlabl ablaBlablablaBlablablaBlablablaBlablablaBlabla blaBlablablaBlablablaBlablabla  blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla
+    	BlablablaBlablablaBlablabla BlablablaBlablablaBlabl ablaBlablablaBlablablaBlablabl
+    	aBlablablaBlabla blaBlablablaBlablablaBlablabla  blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla
     </section>
     <section id="section4"><h2>Parte 4</h2>
-    	BlablablaBlablablaBlablabla BlablablaBlablablaBlabl ablaBlablablaBlablablaBlablablaBlablablaBlabla blaBlablablaBlablablaBlablabla  blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla
+    	BlablablaBlablablaBlablabla BlablablaBlablablaBlabl ablaBlablablaBlablablaBlablabl
+    	aBlablablaBlabla blaBlablablaBlablablaBlablabla  blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla
     </section>
     <section id="section5"><h2>Parte 5</h2>
-    	BlablablaBlablablaBlablabla BlablablaBlablablaBlabl ablaBlablablaBlablablaBlablablaBlablablaBlabla blaBlablablaBlablablaBlablabla  blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla
+    	BlablablaBlablablaBlablabla BlablablaBlablablaBlabl ablaBlablablaBlablablaBlablabl
+    	aBlablablaBlabla blaBlablablaBlablablaBlablabla  blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla
     </section>
 </section>
   </body>
