--- a/site/module-2_Coding-Assignment.html
+++ b/site/module-2_Coding-Assignment.html
@@ -37,7 +37,7 @@
     <p> Some content should be here. We will continue writing until some text goes to the next line.</p>
 </div>
     
-    <p class="clear" style="text-align: right;">My name is  <abbr title = "Daniela de Lima">Dani</abbr>.</p>
+    <p class="clear" style="text-align: right;">By  <abbr title = "Daniela de Lima">Dani</abbr>.</p>
     
 
     <div class="center" >
