--- a/site/module-2_Coding-Assignment.html
+++ b/site/module-2_Coding-Assignment.html
@@ -42,7 +42,7 @@
 
     <div class="center" >
     	
-      	<p style="text-align: center;" 
+      	<p style="text-align: center; width: 12em;" 
          onclick="alert('Thanks for clicking ^^');">
          <button>
          Click here :)
