adição de conteúdo

--- a/site/site-teste.html
+++ b/site/site-teste.html
@@ -60,12 +60,9 @@
 
 
     <section class="clear" id="section1"><h2>Parte 1</h2>
-    	<p>BlablablaBlablablaBlablabla BlablablaBlablablaBlabl ablaBlablablaBlablablaBlablabl
-    		aBlablablaBlabla
+    	<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi rhoncus tortor vel semper blandit. Nulla eu urna arcu. In ex felis, viverra ac ullamcorper ullamcorper, vulputate ac ante. In ipsum ipsum, finibus quis eros ac, pellentesque finibus neque. Etiam id mauris a quam sagittis consectetur ac vitae orci. Morbi et mauris sodales, convallis metus quis, rhoncus mi. Donec bibendum lectus tortor.
     	</p>
-    	<p> BlablaBlablablaBlablablaBlablabla  blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla
-    	</p>
-    	<p> blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla blaBlablablaBlablablaBlablabla
+    	<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi rhoncus tortor vel semper blandit. Nulla eu urna arcu. In ex felis, viverra ac ullamcorper ullamcorper, vulputate ac ante. In ipsum ipsum, finibus quis eros ac, pellentesque finibus neque. Etiam id mauris a quam sagittis consectetur ac vitae orci. Morbi et mauris sodales, convallis metus quis, rhoncus mi. Donec bibendum lectus tortor.
     	</p>
     </section>
     <section id="section2"><h2>Parte 2</h2>
