--- a/site/site-teste.html
+++ b/site/site-teste.html
@@ -37,18 +37,17 @@
     <p> Some content should be here. We will continue writing until some text goes to the next line.</p>
 </div>
     
-    <p class="clear" style="text-align: right;">By  <abbr title = "Daniela de Lima">Dani</abbr>.</p>
+    <p class="clear" id="by" style="text-align: right;">By  <abbr title = "Daniela de Lima">Dani</abbr>.</p>
     
 
     <div class="center" >
-
       	<span
           style="text-align: center;" 
           onclick="alert('Thanks for clicking ^^');">
           <button>Click here :)</button>
       	</span>
-
     </div>
+    <br>
 
     <footer>
       <hr>
