correção da margem, font-family e overflow

--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -16,7 +16,12 @@
   <div class="col-lg-4 col-md-6">
     <section class="item">
       <section class="title" id="Chicken">Chicken</section>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi rhoncus tortor vel semper blandit. Nulla eu urna arcu. In ex felis, viverra ac ullamcorper ullamcorper, vulputate ac ante.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+      cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+      proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
     </section>
     
   </div>
@@ -24,14 +29,24 @@
   <div class="col-lg-4 col-md-6">
     <section class="item">
       <section class="title" id="Beef">Beef</section>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi rhoncus tortor vel semper blandit. Nulla eu urna arcu. In ex felis, viverra ac ullamcorper ullamcorper, vulputate ac ante.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+      cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+      proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
     </section>
   </div>
 
   <div class="col-lg-4 col-md-12">
     <section class="item">
       <section class="title" id="Sushi">Sushi</section>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi rhoncus tortor vel semper blandit. Nulla eu urna arcu. In ex felis, viverra ac ullamcorper ullamcorper, vulputate ac ante.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+      cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+      proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
     </section>
   </div>
 
